# Sports-app

./: .gitignore  README.md  Technical Specification  Technical Specification.md  collect_5_seasons.bat  diagnostics.py  pyproject.toml  requirements.txt  run_smoke.py
cli/: __init__.py  main.py
config/: api_config.yaml  season_phases.yaml  segments.yaml  weights.yaml  zones.yaml
docs/: SIMULATION_DESIGN.md  data-collection-spec.md  development-history.md  implementation-history.md  phase-4b-context.md  project-history.md  roadmap.md  season-segmentation-roadmap.md  simulation-logic-design.md  testing-plan-2024-2025.md
simulation/: __init__.py  adjustments.py  engine.py  expected_goals.py  matchups.py  models.py  predictions.py  profiles.py  runner.py
src/: __init__.py
src/analytics/: __init__.py  clutch_analysis.py  metrics.py  patterns.py  synergy.py
src/collectors/: __init__.py  game_log_collector.py  nhl_api.py  player_collector.py  player_stats.py  run.py  shot_collector.py  shot_data.py  timestamp_data.py
src/database/: __init__.py  db.py  queries.py  schema.sql
src/models/: __init__.py  game.py  player.py  player_card.py  segment.py  team.py
src/processors/: __init__.py  goalie_shot_profile_pipeline.py  heat_map.py  matchup.py  matchup_history_pipeline.py  momentum_pipeline.py  player_card_builder.py  player_shot_location_pipeline.py  run_analysis.py  run_simulation_pipelines.py  schedule_context_pipeline.py  season_segment_pipeline.py  segment_analysis.py  synergy.py  zone_analysis.py
src/service/: __init__.py  data_loader.py  db_enrichment.py  orchestrator.py
src/visualization/: __init__.py  charts.py  heat_maps.py
tests/: __init__.py  conftest.py
tests/test_analytics/: test_clutch_analysis.py  test_metrics.py  test_patterns.py  test_synergy.py
tests/test_collectors/: test_nhl_api.py  test_shot_data.py
tests/test_integration/: __init__.py  test_data_loader.py  test_orchestrator.py
tests/test_models/: test_player.py
tests/test_processors/: test_segment_analysis.py  test_zone_analysis.py
tests/test_simulation/: __init__.py  test_engine.py  test_expected_goals.py  test_models.py  test_predictions.py
